Working service and Model

--- a/temecom-ai-service/pom.xml
+++ b/temecom-ai-service/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<artifactId>temecom-ai-service</artifactId>
 	<name>Temecom AI Service</name>
-
+	<packaging>jar</packaging>
 	<dependencies>
 
 		<dependency>
@@ -60,9 +60,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<includes>**/*.yml</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
