--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<modules>
 		<module>temecom-ai-service</module>
 		<module>temecom-ai-model</module>
+		<module>temecom-ai-ui</module>
 	</modules>
 	<properties>
 		<spring.boot.version>1.5.9.RELEASE</spring.boot.version>
@@ -121,8 +122,21 @@
 				<artifactId>assertj-core</artifactId>
 				<version>3.8.0</version>
 			</dependency>
-
-
 		</dependencies>
 	</dependencyManagement>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.7.0</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
