--- a/temecom-ai-ui/package.json
+++ b/temecom-ai-ui/package.json
@@ -16,8 +16,10 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "bootstrap": "^4.0.0-beta.2",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
+    "ember-bootstrap": "^1.0.0-rc.5",
     "ember-cli": "~2.17.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
@@ -27,6 +29,7 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.1.1",
+    "ember-cli-sass": "^7.1.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
