--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Temecom AI Service Master</name>
-	
+
 	<modules>
 		<module>temecom-ai-service</module>
 		<module>temecom-ai-model</module>
 		<module>temecom-ai-ui</module>
 	</modules>
 	<properties>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.boot.version>1.5.9.RELEASE</spring.boot.version>
 		<springfox.version>2.7.0</springfox.version>
 		<java.version>1.8</java.version>
@@ -45,6 +45,7 @@
 		<aws.sdk.version>1.11.109</aws.sdk.version>
 		<jackson.version>2.6.6</jackson.version>
 		<scala.plugin.version>3.2.2</scala.plugin.version>
+		<neo4j.version>5.0.2.RELEASE</neo4j.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -126,6 +127,11 @@
 				<groupId>org.assertj</groupId>
 				<artifactId>assertj-core</artifactId>
 				<version>3.8.0</version>
+			</dependency>
+			<dependency>
+		        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-neo4j</artifactId>
+				<version>${neo4j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
